--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
                <ul id="menuCapitulos"></ul>
             </nav>
             <div id="content" class="max-w-4xl mx-auto"></div>
+
+            <div id="modal" class="modal">
+               <div class="modal-content">
+                 <span id="modal-message"></span>
+               </div>
+             </div>
+             
          </div>
       </div>
 
